# finance_tracker

./: .claudeignore  .cursorrules  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DATA_PRIVACY.md  LICENSE  PRE_RELEASE_CHECKLIST.md  QUICKSTART.md  README.md  alembic.ini  pyproject.toml  setup.sh
docs/: ADDING_A_PARSER.md  ARCHITECTURE.md  CATEGORIZATION_GUIDE.md  DEVELOPMENT.md  PARSER_HIERARCHY.md  TESTING.md  TROUBLESHOOTING.md  USER_GUIDE.md
docs/workflows/: README.md  import-data.md  run-service.md  setup.md
examples/: simple_bank_parser.py
hooks/: pre-commit
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_add_applied_rule_id.py  003_splitwise_integration.py
scripts/: __init__.py  add_common_merchants.py  analyze_pdf.py  check_pii.py  check_stats.py  detect_reversals.py  fix_credit_card_payments.py  fix_credit_card_payments_v2.py  import_all_data.py  import_bank_statements.py  quick_categorize.py  seed_categories.py
src/finance/: __init__.py  cli.py
src/finance/core/: __init__.py  config.py  database.py  models.py
src/finance/ingestion/: __init__.py  auto_detect.py  bank_account_pdf.py  base.py  pdf_extractor.py  (+2 more)
tests/: test_bank_csv_parser.py  test_credit_card_pdf.py  test_hdfc_bank_pdf_parser.py  test_hdfc_credit_card.py  test_icici_credit_card.py  test_import_service_metadata.py  test_parser_detection_rules.py  test_reconciler_enhanced.py  test_rule_engine.py  test_rule_service.py  test_splitwise_import.py  test_suggestions_routes.py  test_suggestions_simple.py  test_transactions_source_display.py
(+37 files in other folders)
